# wordle

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example.py
src/wordle/: __init__.py  game.py  handler.py  logic.py  result.py
src/wordle/utils/: colors.py  helpers.py  rules.py
tests/: test_game.py  test_helpers.py  test_results.py
